--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <button type="button" class="more_btn">View more</button>
                 <div class="product_wrap">
                     <div class="product_row row1">
-                        <a href="#" class="prd_link">
+                        <a href="#" class="prd_link card1">
                             <div class="product_card">
                                 <img src="./images/best_001.png" alt="에스투드 프로텍터 5.2 미니" class="best_prd_img" loading="lazy">
                                 <div class="prd_info">
@@ -163,7 +163,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="prd_link">
+                        <a href="#" class="prd_link card2">
                             <div class="product_card">
                                 <img src="./images/best_002.png" alt="시그니처 실트 벨 크렘 2.7" class="best_prd_img" loading="lazy">
                                 <div class="prd_info">
@@ -173,9 +173,7 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
-                    <div class="product_row row2">
-                        <a href="#" class="prd_link">
+                        <a href="#" class="prd_link card_3">
                             <div class="product_card">
                                 <img src="./images/best_003.png" alt="시그니처 비트 로제 토너" class="best_prd_img" loading="lazy">
                                 <div class="prd_info">
@@ -185,7 +183,29 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="prd_link">
+                    </div>
+                    <div class="product_row row2">
+                        <a href="#" class="prd_link card_4">
+                            <div class="product_card">
+                                <img src="./images/best_003.png" alt="시그니처 비트 로제 토너" class="best_prd_img" loading="lazy">
+                                <div class="prd_info">
+                                    <h2 class="prd_name">시그니처 비트 로제 토너</h2>
+                                    <p class="prd_eng_name">SIGNATURE VIT ROISE TONER</p>
+                                    <p class="price">￦28,980</p>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#" class="prd_link card_5">
+                            <div class="product_card">
+                                <img src="./images/best_004.png" alt="시그니처 비트 로제 바이탈 크렘" class="best_prd_img" loading="lazy">
+                                <div class="prd_info">
+                                    <h2 class="prd_name">시그니처 비트 로제 바이탈 크렘</h2>
+                                    <p class="prd_eng_name">SIGNATURE VIT ROISEVITALCRÈME</p>
+                                    <p class="price">￦36,600</p>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#" class="prd_link card_6">
                             <div class="product_card">
                                 <img src="./images/best_004.png" alt="시그니처 비트 로제 바이탈 크렘" class="best_prd_img" loading="lazy">
                                 <div class="prd_info">
@@ -198,7 +218,7 @@
                     </div>
                     <div class="product_row row3">
                         <a href="#" class="prd_link">
-                            <div class="product_card">
+                            <div class="product_card card_7">
                                 <img src="./images/best_005.png" alt="에스투드 프로텍터 5.2 미니" class="best_prd_img" loading="lazy">
                                 <div class="prd_info">
                                     <h2 class="prd_name">에스투드 프로텍터 5.2 미니</h2>
@@ -207,7 +227,17 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="prd_link">
+                        <a href="#" class="prd_link card_8">
+                            <div class="product_card">
+                                <img src="./images/best_006.png" alt="시그니처 비트 로제 토너" class="best_prd_img" loading="lazy">
+                                <div class="prd_info">
+                                    <h2 class="prd_name">시그니처 비트 로제 토너</h2>
+                                    <p class="prd_eng_name">SIGNATURE VIT ROISE TONER</p>
+                                    <p class="price">￦28,980</p>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#" class="prd_link card_9">
                             <div class="product_card">
                                 <img src="./images/best_006.png" alt="시그니처 비트 로제 토너" class="best_prd_img" loading="lazy">
                                 <div class="prd_info">
