--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
                     <span>대표이사 : 나성진,강은진</span>
                     <span>사업자등록번호 : 859-87-00723</span>
                 </div>
-                <aliress>서울특별시 성동구 상원길 19, 301호(성수동1가, 신한 IT TOWER)</aliress>
+                <address>서울특별시 성동구 상원길 19, 301호(성수동1가, 신한 IT TOWER)</address>
                 <span>통신판매업신고번호 : 제 2023-서울성동-1717 호</span>
                 <div class="fax_hosting">
                     <span>FAX : 070-4032-1794</span>
