--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Demar 3 | Re-Design & Publishing</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/footer.css">
     <!--프리텐다드(v1.3.9) 웹글꼴 연결주소-->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css" />
     <!-- 글꼴 연결 -->
@@ -39,37 +40,40 @@
                     <li class="gnb_menu_title">
                         <a href="#">PRODUCTS</a>
                         <ul class="gnb_sub">
-                            <li class="gnb_sub_title">라인별</li>
-                            <div class="menu_category">
-                                <li><a href="#">시그니처</a></li>
-                                <li><a href="#">렘로주</a></li>
-                                <li><a href="#">에트셀</a></li>
-                                <li><a href="#">시타듀</a></li>
-                                <li><a href="#">리듀포</a></li>
-                            </div>
+                            <li class="gnb_sub_title"><h2>라인별</h2>
+                                <ul class="menu_category">
+                                    <li><a href="#">시그니처</a></li>
+                                    <li><a href="#">렘로주</a></li>
+                                    <li><a href="#">에트셀</a></li>
+                                    <li><a href="#">시타듀</a></li>
+                                    <li><a href="#">리듀포</a></li>
+                                </ul>
+                            </li>
                         </ul>
                         <ul class="gnb_sub">
-                            <li class="gnb_sub_title">효능별</li>
-                            <div class="menu_category">
-                                <li><a href="#">토탈솔루션</a></li>
-                                <li><a href="#">탈력</a></li>
-                                <li><a href="#">미백</a></li>
-                                <li><a href="#">보습</a></li>
-                                <li><a href="#">문제성지성</a></li>
-                                <li><a href="#">정화/인티폴루션</a></li>
-                                <li><a href="#">모공</a></li>
-                            </div>
+                            <li class="gnb_sub_title"><h2>효능별</h2>
+                                <ul class="menu_category">
+                                    <li><a href="#">토탈솔루션</a></li>
+                                    <li><a href="#">탈력</a></li>
+                                    <li><a href="#">미백</a></li>
+                                    <li><a href="#">보습</a></li>
+                                    <li><a href="#">문제성지성</a></li>
+                                    <li><a href="#">정화/인티폴루션</a></li>
+                                    <li><a href="#">모공</a></li>
+                                </ul>
+                            </li>
                         </ul>
                         <ul class="gnb_sub">
-                            <li class="gnb_sub_title">유형별</li>
-                            <div class="menu_category">
-                                <li><a href="#">특가기획전</a></li>
-                                <li><a href="#">토너</a></li>
-                                <li><a href="#">앰플/세럼</a></li>
-                                <li><a href="#">크림</a></li>
-                                <li><a href="#">클렌지/샴푸/바디</a></li>
-                                <li><a href="#">오일</a></li>
-                            </div>
+                            <li class="gnb_sub_title"><h2>유형별</h2>
+                                <ul class="menu_category">
+                                    <li><a href="#">특가기획전</a></li>
+                                    <li><a href="#">토너</a></li>
+                                    <li><a href="#">앰플/세럼</a></li>
+                                    <li><a href="#">크림</a></li>
+                                    <li><a href="#">클렌지/샴푸/바디</a></li>
+                                    <li><a href="#">오일</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li class="gnb_menu_title"><a href="#">BRAND STORY</a></li>
@@ -896,52 +900,52 @@
                 </div>
             </div>
         </section>
-        <footer>
-            <div class="ft_left">
-                <h1 class="logo"><a href="#">Demar 3</a></h1>
-                <div class="cs_center">
-                    <p>CS Center</p>
-                    <p class="phone">02-6010-1177</p>
-                </div>
-                <div class="schedule">
-                    <p>평일 10:00 ~ 18:00 / 점심시간 12:30 ~ 13:30</p>
-                    <p>토요일, 일요일 공휴일 휴무</p>
-                </div>
-                <div class="official">
-                    <img src="./images/official_mark.png" alt="디마르3 공식 마크">
-                    <p>디마르3 공식 홈페이지입니다.<br>
-                        공식몰을 통해 판매되고 있는 모든 제품은 100% 정품이며,<br>
-                        자사 브랜드와 계약된 공식 판매처 외의 구매 제품에 대한 반품 및 교환, 환불 등의 처리가 불가합니다.</p>
-                </div>
-            </div>
-            <div class="ft_right">
-                <nav class="ft_menu">
-                    <ul class="ft_menu_list">
-                        <li><a href="#">브랜드 스토리</a></li>
-                        <li><a href="#">이용 약관</a></li>
-                        <li><a href="#">개인 정보처리 방침</a></li>
-                        <li><a href="#">사이트 이용 안내</a></li>
-                    </ul>
-                </nav>
-                <div class="basic_info">
-                    <h3>(주)자연물질연구소</h3>
-                    <span>대표이사 : 나성진,강은진</span>
-                    <span>사업자등록번호 : 859-87-00723</span>
-                </div>
-                <address>서울특별시 성동구 상원길 19, 301호(성수동1가, 신한 IT TOWER)</address>
-                <span>통신판매업신고번호 : 제 2023-서울성동-1717 호</span>
-                <div class="fax_hosting">
-                    <span>FAX : 070-4032-1794</span>
-                    <span>호스팅제공 : 엔에이치엔커머스(주)</span>
-                </div>
-                <div class="ask_wrap">
-                    <span>대표 문의 : help@demar3.co.kr</span>
-                    <span>수출 문의 : global@demar3.co.kr</span>
-                    <span>제휴 문의 : b2b@demar3.co.kr</span>
-                </div>
-                <span class="copyright">&copy; Natural Substances Lab Inc. All Rights Reserved.</span>
-            </div>
-        </footer>
     </main>
+    <footer>
+        <div class="ft_left">
+            <h1 class="logo"><a href="#">Demar 3</a></h1>
+            <div class="cs_center">
+                <p>CS Center</p>
+                <p class="phone">02-6010-1177</p>
+            </div>
+            <div class="schedule">
+                <p>평일 10:00 ~ 18:00 / 점심시간 12:30 ~ 13:30</p>
+                <p>토요일, 일요일 공휴일 휴무</p>
+            </div>
+            <div class="official">
+                <img src="./images/official_mark.png" alt="디마르3 공식 마크">
+                <p>디마르3 공식 홈페이지입니다.<br>
+                    공식몰을 통해 판매되고 있는 모든 제품은 100% 정품이며,<br>
+                    자사 브랜드와 계약된 공식 판매처 외의 구매 제품에 대한 반품 및 교환, 환불 등의 처리가 불가합니다.</p>
+            </div>
+        </div>
+        <div class="ft_right">
+            <nav class="ft_menu">
+                <ul class="ft_menu_list">
+                    <li><a href="#">브랜드 스토리</a></li>
+                    <li><a href="#">이용 약관</a></li>
+                    <li><a href="#">개인 정보처리 방침</a></li>
+                    <li><a href="#">사이트 이용 안내</a></li>
+                </ul>
+            </nav>
+            <div class="basic_info">
+                <h3>(주)자연물질연구소</h3>
+                <span>대표이사 : 나성진,강은진</span>
+                <span>사업자등록번호 : 859-87-00723</span>
+            </div>
+            <address>서울특별시 성동구 상원길 19, 301호(성수동1가, 신한 IT TOWER)</address>
+            <span>통신판매업신고번호 : 제 2023-서울성동-1717 호</span>
+            <div class="fax_hosting">
+                <span>FAX : 070-4032-1794</span>
+                <span>호스팅제공 : 엔에이치엔커머스(주)</span>
+            </div>
+            <div class="ask_wrap">
+                <span>대표 문의 : help@demar3.co.kr</span>
+                <span>수출 문의 : global@demar3.co.kr</span>
+                <span>제휴 문의 : b2b@demar3.co.kr</span>
+            </div>
+            <span class="copyright">&copy; Natural Substances Lab Inc. All Rights Reserved.</span>
+        </div>
+    </footer>
 </body>
 </html>
